# Innova-TradingBot-Py

./: .gitignore  FASE1_PRUEBAS.md  PASO_A_PASO_ARRANCAR_TODO.md  README.md
backend/: .gitignore  COMO_ARRANCAR.md  GUIA_ESTADO_Y_MEJORAS.md  README.md  iniciar_api.bat  pyproject.toml  requirements.txt
backend/config/: default.yaml
backend/src/api/: server.py  state.py
backend/src/app/: backtest.py  engine.py  main.py
backend/src/controllers/: api_controller.py
backend/src/infrastructure/deriv/: deriv_ws_client.py
backend/src/infrastructure/logging/: logging.py
backend/src/infrastructure/storage/: sqlite_repository.py
backend/src/infrastructure/utils/: config.py  timeutils.py
backend/src/models/: market_models.py  trade_models.py
backend/src/services/execution/: deriv_multiplier_resolver.py  order_executor.py
backend/src/services/market/: candle_builder.py  deriv_history.py  higher_tf_trend.py  indicators.py  support_resistance.py
backend/src/services/monitoring/: metrics.py  metrics_store.py
backend/src/services/risk/: killswitch.py  position_sizer.py  risk_firewall.py  tp_sl.py
backend/src/services/strategy/: trend_pullback.py
backend/teste/: test_deriv_auth.py
docs/: deriv_tokens.md
frontend/: README.md
frontend/frontend/: .env  package-lock.json  package.json  vite.config.js
frontend/frontend/src/: App.css  App.jsx  index.css
frontend/frontend/src/components/: Badge.jsx  Card.jsx  Table.jsx
frontend/frontend/src/config/: tabs.js
frontend/frontend/src/utils/: deriv.js
frontend/frontend/src/views/: EventosTab.jsx  InicioTab.jsx  MetricasTab.jsx  TradesTab.jsx
